Performing code cleanup