@@ -66,12 +66,12 @@ public class OperandFormat {
      */
     static Instruction bestOperandMatch(TokenList tokenList, ArrayList instrMatches) {
         if (instrMatches == null) return null;
-        if (instrMatches.size() == 1) return (Instruction) instrMatches.get(0);
+        if (instrMatches.size() == 1) return (Instruction) instrMatches.getFirst();
         for (Object instrMatch : instrMatches) {
             Instruction potentialMatch = (Instruction) instrMatch;
             if (tokenOperandMatch(tokenList, potentialMatch, new ErrorList())) return potentialMatch;
         }
-        return (Instruction) instrMatches.get(0);
+        return (Instruction) instrMatches.getFirst();
     }
 
     // Simply check to see if numbers of operands are correct and generate error message if not.
