@@ -165,7 +165,7 @@ public class MemoryConfigurations {
                     "Compact, Text at Address 0",
                     configurationItemNames,
                     textBasedCompactConfigurationItemValues));
-            defaultConfiguration = (MemoryConfiguration) configurations.get(0);
+            defaultConfiguration = (MemoryConfiguration) configurations.getFirst();
             currentConfiguration = defaultConfiguration;
             // Get current config from settings
             // String currentConfigurationIdentifier = Globals.getSettings().getMemoryConfiguration();
